--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+cryptography = ">=2.3"
 gevent = "==1.3.3"
 greenlet = "==0.4.13"
 gunicorn = "==19.8.1"
